<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e6e3e3"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"

        android:background="#04c9e2">
        <Button
            android:id="@+id/search"
            android:layout_width="85dp"
            android:layout_height="30dp"
            android:text="@string/search"
            android:layout_marginLeft="40dp"
            android:background="@drawable/button"
            android:textSize="15dp"
            android:textColor="#04c9e2"
            android:layout_marginTop="12dp"
            />

        <Button
            android:id="@+id/findable"
            android:layout_width="85dp"
            android:layout_height="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="2dp"
            android:background="@drawable/button"
            android:text="@string/discoverable1"
            android:textSize="15dp"
            android:textColor="#04c9e2"
            android:layout_marginTop="12dp"
            />

        <Button
            android:id="@+id/wifi_return"
            android:layout_width="85dp"
            android:layout_height="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="2dp"
            android:background="@drawable/button"
            android:text="@string/retgrid"
            android:textSize="15dp"
            android:textColor="#04c9e2"
            android:layout_marginTop="12dp"

            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:weightSum="1"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/search">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="接收数:"
            android:textSize="15dp"
            android:textColor="#000000"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/incount"
            android:layout_width="44dp"
            android:layout_height="wrap_content"
            android:background="#f7da89"
            android:textColor="#000000"
            android:layout_marginTop="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="8dp"
            android:text="发送数:"
            android:textColor="#000000"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/outcount"
            android:layout_width="44dp"
            android:layout_height="wrap_content"
            android:background="#a4e7ae"
            android:textColor="#000000"

            android:layout_marginTop="8dp"/>
    </LinearLayout>



    <LinearLayout
    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/receiver">
        <TextView
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="165dp"
            android:hint="@string/input"
            android:textSize="15dp"
            android:scrollbars="vertical"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:textColor="#000000"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:weightSum="1">

        <Button
            android:id="@+id/clearcount"
            android:layout_width="85dp"
            android:layout_height="30dp"
            android:background="@drawable/button"
            android:onClick="onClearCountButtonClicked"
            android:text="@string/clearcount"
            android:textSize="15dp"
            android:textColor="#000000"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/svf"
            android:layout_width="85dp"
            android:layout_height="30dp"
            android:background="@drawable/button"
            android:onClick="onSaveButtonClicked"
            android:text="@string/svf"
            android:textSize="15dp"
            android:layout_marginLeft="150dp"
            android:textColor="#000000"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/receiver"
        >

        <EditText
            android:id="@+id/output"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="#ffffff"
            android:hint="@string/output"
            android:textSize="15dp"
            android:scrollbars="vertical"
            android:layout_marginTop="15dp"
            android:textColor="#000000"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="7dp"
        android:gravity="center"
        >

        <Button
            android:id="@+id/clear"
            android:layout_width="85dp"
            android:layout_height="30dp"
            android:background="@drawable/button"
            android:onClick="onClearButtonClicked"
            android:text="@string/clear"
            android:textSize="15dp"
            android:textColor="#000000"/>

        <Button
            android:id="@+id/button_send"
            android:layout_width="85dp"
            android:background="@drawable/button"
            android:layout_height="30dp"
            android:text="@string/send"
            android:textSize="15dp"
            android:layout_marginLeft="150dp"
            android:textColor="#000000"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="3dp"
       >

        <CheckBox
            android:id="@+id/in16"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text=" 16进制显示"
            android:textSize="15dp"
            android:layout_marginLeft="20dp"
            android:textColor="#000000"
            android:checked="true"
            style="@style/checkbox"
            />
        <CheckBox
            android:id="@+id/out16"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/out16"
            android:textSize="15dp"
            android:textColor="#000000"
            android:checked="true"
            android:layout_weight="1"
            style="@style/checkbox"/>

        <CheckBox
            android:id="@+id/autosend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/autosend"
            android:textSize="15dp"
            android:textColor="#000000"
            android:layout_weight="1"
            style="@style/checkbox"
            android:layout_marginRight="3dp"
            />
    </LinearLayout>
</LinearLayout>